--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div class="container">
     <div class="footer__logo">
-      <img src="{{file.path}}/assets/images/logo-footer.svg" alt="Etalab">
+      <img src="{{file.path}}/assets/images/etalab.svg" alt="Etalab">
       {% if site.data.footer.social %}
       <ul class="footer__social">
         {% for item in site.data.footer.social %}
