--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 {% include hero.html title=page.summary %}
-<section class="section-grey">
+<section class="section section-grey">
   <div class="container article__container">
     {% for post in site.posts %}
       <article class="article article__preview panel">
