--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<section class="article article__full">
+<section class="section article article__full">
   {% include hero.html title=page.title date=page.date image=page.image %}
   <div class="article__content" itemscope itemtype="http://schema.org/BlogPosting">
     <div class="article__container">
