--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,8 +5,7 @@
     <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
     <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}" />
 
-    <link rel="stylesheet" type="text/css" media="screen,projection" href="{{ site.url }}{{ "/assets/style/main.css" }}">
-    <link rel="stylesheet" type="text/css" media="screen,projection" href="{{ site.url }}{{ "/assets/main.css" | relative_url }}">
+    <link rel="stylesheet" type="text/css" media="screen,projection" href="{{ site.url }}{{ "/assets/main.min.css" }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}" />
 </head>
