Fix edit link if articles are in a collections folder

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,6 +3,8 @@ layout: default
 ---
 
 {% assign lang = page.lang | default: site.lang | default: "en" %}
+{% assign base_path = site.collections_dir | default: "" | append: "/" %}
+
 <div class="page article">
 {% include hero.html title=page.title %}
 <section class="section">
@@ -14,7 +16,7 @@ layout: default
         Use the github edit link until netlify-cms support easy deep link.
         See: https://github.com/netlify/netlify-cms/issues/697
     {% endcomment %}
-    <a class="edit-button" href="https://github.com/{{ site.github_repository }}/edit/master/{{ page.path }}">
+    <a class="edit-button" href="https://github.com/{{ site.github_repository }}/edit/master{{ base_path }}{{ page.path }}">
         ✎ {{ site.i18n[lang].edit }}
     </a>
   </div>
